# Finite-Automata-Theory-2024

./: CMakeLists.txt
regex-to-buchi/: CMakeLists.txt  README.md  main.cpp
regex-to-buchi/include/algo/: RegexToNFA.h
regex-to-buchi/include/entity/: Alphabet.h  Automaton.h  AutomatonBuilder.h  State.h  TransitionsRelation.h
regex-to-buchi/include/helper/: ConcatenationHelper.h  ExamplesHelper.h  VisualizeHelper.h
regex-to-buchi/include/visualizer/: AutomatonVisualizer.h
regex-to-buchi/src/algo/: RegexToNFA.cpp
regex-to-buchi/src/entity/: Automaton.cpp  AutomatonBuilder.cpp  State.cpp  TransitionsRelation.cpp
regex-to-buchi/src/helper/: ConcatenationHelper.cpp  ExamplesHelper.cpp  VisualizeHelper.cpp
regex-to-buchi/src/visualizer/: AutomatonVisualizer.cpp
regex-to-buchi/visualized/example_0/: concat_example_1.dot
regex-to-buchi/visualized/example_1/: concat_example_2.dot
regex-to-buchi/visualized/example_2/: concat_example_3.dot
regex-to-buchi/visualized/example_3/: concat_example_4.dot
regex-to-mealy/: CMakeLists.txt  README.md  main.cpp
regex-to-mealy/include/algo/: RegexToMealy.h
regex-to-mealy/include/entity/: Alphabet.h  Automaton.h  AutomatonBuilder.h  State.h  TransitionsRelation.h
regex-to-mealy/include/helper/: SynthesisHelper.h  VisualizeHelper.h
regex-to-mealy/include/visualizer/: AutomatonVisualizer.h
regex-to-mealy/src/algo/: RegexToMealy.cpp
regex-to-mealy/src/entity/: Alphabet.cpp  Automaton.cpp  AutomatonBuilder.cpp  State.cpp  TransitionsRelation.cpp
regex-to-nfa/: CMakeLists.txt  README.md  main.cpp
(+24 files in other folders)
